syntax = "proto3";
package pb;

option go_package = "../pb";

//消息格式
message PushMsg {
    enum Type {
        PUSH = 0;
        ROOM = 1;
        BROADCAST = 2;
    }
    Type type = 1; //消息类型 推送到个人  推送到房间  推送到所有人
    int32 operation = 2; //协议指令  比如心跳包 同步 发送 接收
    int32 speed = 3; //广播的时候间隔时间 time.Sleep(time.Duration(取余speed))) * time.Second)
    string server = 4; //serverID comet服务 ip port
    string room_id = 5; //房间号 
    repeated int64 keys = 6; //设备id
    bytes msg = 7;
}

message PushMsgReq {
  PushMsg message = 1;
}

message PushMsgReply {
}
